--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "main": "index.js",
   "license": "MIT",
   "private": true,
-  "xmldom": "https://github.com/valinaga/xmldom.git",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
@@ -15,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-teirouter": "^2.0.4"
+    "xmldom": ".6",
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
