--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-teirouter": "^2.0.4"
-    "xmldom": ".6",
+    "xmldom": "0.6",
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
