--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@reach/router": "^1.3.4",
     "clsx": "^1.1.1",
-    "gatsby": "^3.3.1",
-    "gatsby-plugin-material-ui": "^3.0.1",
+    "gatsby": "^2.19.38",
+    "gatsby-plugin-material-ui": "^2.1.10",
+    "gatsby-source-filesystem": "^4.13.0",
     "gatsby-theme-ceteicean": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-teirouter": "^2.0.4"
+    "react-teirouter": "^2.0.4",
+    "router": "^1.3.6"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
