--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "build-local": "gatsby build",
     "build": "gatsby build --prefix-paths",
     "clean": "gatsby clean",
-    "develop": "gatsby develop"
+    "develop": "gatsby develop",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   }
 }
