--- a/package.json
+++ b/package.json
@@ -1,39 +1,46 @@
 {
-  "name": "mith301-project",
-  "version": "1.0.0",
+  "name": "se-microedition-template",
+  "version": "2.0.0",
   "main": "index.js",
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "@reach/router": "^1.3.4",
-    "clsx": "^1.1.1",
-    "gatsby": "^2.19.38",
-    "gatsby-plugin-material-ui": "^2.1.10",
-    "gatsby-source-filesystem": "^2.11.1",
-    "gatsby-theme-ceteicean": "^1.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-teirouter": "^2.0.4",
-    "router": "^1.3.6"
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.3",
+    "@mui/styles": "^5.6.2",
+    "@types/react-helmet": "^6.1.5",
+    "gatsby": "^4.12.1",
+    "gatsby-plugin-emotion": "^7.13.0",
+    "gatsby-plugin-image": "^2.13.0",
+    "gatsby-plugin-manifest": "^4.13.0",
+    "gatsby-plugin-material-ui": "4.1.0",
+    "gatsby-plugin-sharp": "^4.13.0",
+    "gatsby-theme-ceteicean": "^3.0.0",
+    "gatsby-transformer-remark": "^5.13.0",
+    "gatsby-transformer-sharp": "^4.13.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-helmet": "^6.1.0",
+    "react-teirouter": "^3.0.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "eslint": "^7.24.0",
+    "@types/react": "^18.0.7",
+    "@types/react-dom": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.2.0",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.2.1",
     "typescript": "^4.2.4"
   },
   "scripts": {
-    "build-local": "gatsby build",
     "build": "gatsby build --prefix-paths",
     "clean": "gatsby clean",
     "develop": "gatsby develop",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+    "metadata": "node scripts/metadata.js",
+    "doi": "node scripts/doi.js"
   }
 }
