--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "gh-pages": "^4.0.0",
     "prettier": "^2.2.1",
     "typescript": "^4.2.4"
   },
@@ -41,6 +42,7 @@
     "clean": "gatsby clean",
     "develop": "gatsby develop",
     "metadata": "node scripts/metadata.js",
-    "doi": "node scripts/doi.js"
+    "doi": "node scripts/doi.js",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   }
 }
