--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
     "develop": "gatsby develop",
     "metadata": "node scripts/metadata.js",
     "doi": "node scripts/doi.js",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public -b main"
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public -b gh-pages"
   }
 }
